# ckanext-admin-panel

./: MANIFEST.in  README.md  dev-requirements.txt  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/admin_panel/: column_display.py  config.py  config_declaration.yaml  helpers.py  interfaces.py  log_handlers.py  model.py  plugin.py  types.py  utils.py
ckanext/admin_panel/assets/: webassets.yml
ckanext/admin_panel/assets/css/: admin_panel.css  admin_panel.css.map
ckanext/admin_panel/assets/js/: admin_panel.js  ap-confirm-action.js  ap-nested-dropdown.js  ap-theme-switcher.js  ap-toggle-state.js  theme-switcher.js
ckanext/admin_panel/logic/: action.py  auth.py  schema.py
ckanext/admin_panel/migration/admin_panel/: alembic.ini
ckanext/admin_panel/templates/: header.html  page.html
ckanext/admin_panel/templates/admin_panel/: base.html  panel_links.html  panel_search.html  toolbar.html
ckanext/admin_panel/templates/snippets/: apply_color_schema.html
ckanext/admin_panel/tests/: test_plugin.py
ckanext/admin_panel/theme/: admin_panel.scss  elements.scss  global.scss  variables.scss
ckanext/admin_panel/theme/elements/: accordion.scss  admin-panel.scss  buttons.scss  form.scss  list.scss  modal.scss  pager.scss  table-filter.scss  table.scss  theme-switcher.scss
ckanext/admin_panel/theme/page/: user_list.scss
ckanext/admin_panel/views/: __init__.py  basic.py  config.py  content.py  reports.py  user.py
ckanext/ap_cron/: cli.py  col_renderers.py  config.py  const.py  helpers.py  interfaces.py  model.py  plugin.py  types.py  utils.py  views.py
ckanext/ap_cron/assets/: webassets.yml
ckanext/ap_cron/assets/js/: ap-cron-htmx.js  ap-hyperscript.js  ap-jsonlint.js
ckanext/ap_cron/collection/: __init__.py  cron.py
ckanext/ap_cron/logic/: action.py  auth.py  schema.py  validators.py
ckanext/ap_cron/migration/admin_panel_cron/: alembic.ini  env.py
ckanext/ap_cron/templates/: page.html
ckanext/ap_cron/templates/ap_cron/: cron_edit_modal.html  cron_edit_modal_form.html  cron_list copy.html  cron_list.html  cron_new_modal.html  cron_record.html  cron_table_row.html
ckanext/ap_cron/tests/: conftest.py  factories.py  test_interface.py
ckanext/ap_cron/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/ap_doi/: collection.py  config.py  config_declaration.yaml  config_schema.yaml  const.py  plugin.py  presets.yaml  utils.py  views.py
ckanext/ap_doi/logic/: action.py  auth.py  schema.py
ckanext/ap_doi/templates/ap_doi/: list.html  record.html
ckanext/ap_doi/templates/user/: dashboard_doi.html
ckanext/ap_example/: config_declaration.yaml  config_schema.yaml  plugin.py  views.py
ckanext/ap_example/templates/ap_example/: display_config.html
ckanext/ap_log/: col_renderers.py  collection.py  log_handlers.py  plugin.py  views.py
ckanext/ap_log/migration/admin_panel_log/: alembic.ini
ckanext/ap_log/templates/ap_log/: logs_disabled.html
ckanext/ap_main/: col_renderers.py  column_display.py  config.py  config_declaration.yaml  helpers.py  interfaces.py  log_handlers.py  model.py  plugin.py  types.py  utils.py
ckanext/ap_main/assets/: webassets.yml
ckanext/ap_main/assets/css/: admin_panel.css  admin_panel.css.map
ckanext/ap_main/assets/js/: ap-bulk-check.js  ap-copy-to-clipboard.js  ap-disable-field.js  ap-htmx.js  ap-hyperscript.js  ap-jsonlint.js  ap-main.js  ap-notify.js  ap-tom-select.js  ap-tooltip.js
ckanext/ap_main/collection/: __init__.py  base.py  content.py  report.py  user.py
ckanext/ap_main/logic/: action.py  schema.py  validators.py
ckanext/ap_main/templates/: page.html
ckanext/ap_main/templates/admin_panel/: base.html  panel_links.html  toolbar.html
ckanext/ap_main/theme/: admin_panel.scss  global.scss  variables.scss
ckanext/ap_main/theme/elements/: admin-panel.scss  badge.scss  breadcrumb.scss  buttons.scss  flash.scss  form.scss  modal.scss  notify_toast.scss  table-filter.scss  (+2 more)
ckanext/ap_main/views/: __init__.py  basic.py  config.py  content.py  generics.py  reports.py  user.py
ckanext/ap_support/: col_renderers.py  collection.py  config.py  helpers.py  model.py  plugin.py  types.py  views.py
ckanext/ap_support/assets/: webassets.yml
ckanext/ap_support/logic/: action.py  auth.py  schema.py  validators.py
ckanext/ap_support/templates/: header.html  page.html
(+68 files in other folders)
