[metadata]
name = ckanext-admin-panel
version = 1.0.0
description = Custom admin panel for CKAN to expand default functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-admin-panel
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
install_requires =
            typing-extensions
            ckanext-toolbelt
            ckanext-collection>=0.1.0,<0.2.0
include_package_data = True

[options.entry_points]
ckan.plugins =
             admin_panel = ckanext.ap_main.plugin:AdminPanelPlugin
             admin_panel_cron = ckanext.ap_cron.plugin:AdminPanelCronPlugin
             ap_cron_test = ckanext.ap_cron.tests.factories:ApCronTestPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
width = 80

[init_catalog]
domain = ckanext-admin_panel
input_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
output_dir = ckanext/admin_panel/i18n

[update_catalog]
domain = ckanext-admin_panel
input_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
output_dir = ckanext/admin_panel/i18n
previous = true

[compile_catalog]
domain = ckanext-admin_panel
directory = ckanext/admin_panel/i18n
statistics = true
