[metadata]
name = ckanext-admin-panel
version = 1.0.0
description = Custom admin panel for CKAN to expand default functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-admin-panel
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
install_requires =
            typing-extensions
            ckanext-toolbelt
            ckanext-collection>=0.1.1,<0.3.0
            ckanext-files==0.0.7
            croniter>=2.0.1,<3.0.0
            cron-descriptor>=1.4.0,<2.0.0
            ckanext-wysiwyg>=0.1.0,<1.0.0
            ckanext-doi>=3.1.12,<4.0.0
            ckanext-editable-config==0.0.6


include_package_data = True

[options.entry_points]
ckan.plugins =
             admin_panel = ckanext.ap_main.plugin:AdminPanelPlugin
             admin_panel_log = ckanext.ap_log.plugin:AdminPanelLogPlugin
             admin_panel_cron = ckanext.ap_cron.plugin:AdminPanelCronPlugin
             admin_panel_support = ckanext.ap_support.plugin:AdminPanelSupportPlugin
             admin_panel_example = ckanext.ap_example.plugin:AdminPanelExamplePlugin
             admin_panel_doi = ckanext.ap_doi.plugin:AdminPanelDoiPlugin
             ap_doi = ckanext.ap_doi.plugin:ApDOIPlugin
             ap_cron_test = ckanext.ap_cron.tests.factories:ApCronTestPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
test=
    pytest-ckan
    git-changelog

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
width = 80

[init_catalog]
domain = ckanext-admin_panel
input_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
output_dir = ckanext/admin_panel/i18n

[update_catalog]
domain = ckanext-admin_panel
input_file = ckanext/admin_panel/i18n/ckanext-admin_panel.pot
output_dir = ckanext/admin_panel/i18n
previous = true

[compile_catalog]
domain = ckanext-admin_panel
directory = ckanext/admin_panel/i18n
statistics = true
